# iconfig

./: .gitignore  .readthedocs.yml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: docs.yml
config/: app.yaml
docs/: api.rst  conf.py  index.rst  readthedocs-setup.md  requirements.txt
scripts/: bump_version.py
src/iconfig/: __init__.py  iconfig.py  keyindex.py  labels.py  utils.py
tests/: .env.test  conftest.py  test_iconfig.py  test_keyindex.py  test_utils.py
tests/fixtures/test1/: .index.yaml  config1.yaml  config2.yaml
tests/fixtures/test1/subconfig/: subconfig1.yaml  subconfig2.yaml
