[project]
name = "iconfig"
version = "0.1.0"
description = "A hierarchical configuration management system for Python applications with fast key-based lookups"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "heinerlehr", email = "heiner.lehr@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
iconfig = "iconfig:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=2.5.0",
    "myst-parser>=4.0.0",
]
