[project]
name = "iconfig"
version = "0.1.3"
description = "A hierarchical configuration management system for Python applications with fast key-based lookups"
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Heiner Lehr", email = "heiner.lehr@gmail.com" }
]
maintainers = [
    { name = "Heiner Lehr", email = "heiner.lehr@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.0",
]
keywords = [
    "configuration",
    "config",
    "yaml",
    "hierarchical",
    "settings",
    "management",
    "environment",
    "dotenv"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/heinerlehr/iconfig"
Documentation = "https://iconfig.readthedocs.io/"
Repository = "https://github.com/heinerlehr/iconfig.git"
Issues = "https://github.com/heinerlehr/iconfig/issues"
Changelog = "https://github.com/heinerlehr/iconfig/blob/main/README.md#changelog"

[project.optional-dependencies]
env = ["python-dotenv>=1.0.0"]
validation = ["pydantic>=2.0.0"]

[project.scripts]
iconfig = "iconfig:main"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autodoc-typehints>=2.5.0",
    "myst-parser>=4.0.0",
    "build>=1.3.0",
]
